--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -116,14 +116,19 @@
     /* --main-h: 222;
     --main-s: 89%;
     --main-l: 55%; 
+
      --main-h: 202;
     --main-s: 73%;
     --main-l: 54%;
-    */
 
-    --main-h: 233.4;
+     --main-h: 233.4;
     --main-s: 46.2%;
     --main-l: 36.6%;
+    */
+
+    --main-h: 219.1;
+    --main-s: 52%;
+    --main-l: 43.3%;
     --main: var(--main-h) var(--main-s) var(--main-l);
     /* White Color */
     --white: 0 0% 100%;
@@ -173,17 +178,17 @@
     --main-700: hsl(var(--main-h), var(--main-s), calc(var(--main-l) - var(--main-l) * 0.1));
     --main-800: hsl(var(--main-h), var(--main-s), calc(var(--main-l) - var(--main-l) * 0.2));
     --main-900: hsl(var(--main-h), var(--main-s), calc(var(--main-l) - var(--main-l) * 0.3));
-    --base-two-10: #353F901A;
+    --base-two-10: #3366991A;
     --base-two-100: #12121299;
     --base-two-200: #00998B0D;
-    --base-two-300: #353F9099;
-    --base-two-600: #353F90;
-    /* --base-two-600: #353F90; */
+    --base-two-300: #33669999;
+    --base-two-600: #336699;
+    /* --base-two-600: #336699; */
     --primary-05: #5D69F40D;
     --primary-50: #101010;
     --primary-100: #4A91A7;
-    --primary-400: #353F90;
-    --primary-500: #353F90;
+    --primary-400: #336699;
+    --primary-500: #336699;
     --primary-600: #0000DF;
     --dark-100: #9d99990f;
     --dark-500: #65758b;
@@ -210,10 +215,10 @@
     --warning-200: #FEF08A;
     --warning-300: #FDE047;
     --warning-400: #74CDFF;
-    --warning-500: #353F90;
+    --warning-500: #336699;
     --warning-600: #FF9F29;
-    --warning-700: #353F90;
-    --warning-800: #353F90;
+    --warning-700: #336699;
+    --warning-800: #336699;
     --warning-900: #0000FF;
     --danger-05: #FF61610D;
     --danger-30: #F376390D;
@@ -222,10 +227,10 @@
     --danger-200: #FEF08A;
     --danger-300: #FDE047;
     --danger-400: #74CDFF;
-    --danger-500: #353F90;
+    --danger-500: #336699;
     --danger-600: #ED0000;
-    --danger-700: #353F90;
-    --danger-800: #353F90;
+    --danger-700: #336699;
+    --danger-800: #336699;
     --danger-900: #0000FF;
     --font-xs: 0.75rem;
     --font-sm: 0.875rem;
@@ -592,7 +597,7 @@ input[type=number] {
 }
 
 .form-switch .form-check-input:checked {
-    background-color: #353F90;
+    background-color: #336699;
 }
 
 .form-switch .form-check-input:checked::before {
@@ -1345,7 +1350,7 @@ a {
     display: inline-block;
     transition: 0.2s linear;
     text-decoration: none;
-    color: #0661e9;
+    color: #36a2df;
 }
 
 a:hover {
@@ -2685,11 +2690,11 @@ input:focus-visible {
 }
 
 .tw-border-base-two-600-dashed {
-    border: 1px dashed #353F90;
+    border: 1px dashed #336699;
 }
 
 .tw-hover-border-bottom-base-two-600:hover {
-    border-bottom: 3px solid #353F90;
+    border-bottom: 3px solid #336699;
 }
 
 .tw-hover-border-black:hover {
@@ -2709,7 +2714,7 @@ input:focus-visible {
 }
 
 .border-bottom-two-px-solid {
-    border-bottom: 3px solid #353F90;
+    border-bottom: 3px solid #336699;
 }
 
 .border-neutral-two-px-solid {
@@ -2721,11 +2726,11 @@ input:focus-visible {
 }
 
 .border-base-two-100 {
-    border: 2px dashed #353F90;
+    border: 2px dashed #336699;
 }
 
 .border-bottom-base-two-600 {
-    border-bottom: 3px solid #353F90;
+    border-bottom: 3px solid #336699;
 }
 
 .border-neutral-1px-solid {
@@ -2753,7 +2758,7 @@ input:focus-visible {
 }
 
 .border-warning-600-2px {
-    border: 2px solid #353F90;
+    border: 2px solid #336699;
 }
 
 .border-neutral-200 {
@@ -2765,7 +2770,7 @@ input:focus-visible {
 }
 
 .border-primary-400-1 {
-    border: 1px solid #353F90;
+    border: 1px solid #336699;
 }
 
 .border-primary-600 {
@@ -3329,7 +3334,7 @@ input:focus-visible {
 }
 
 .hover-bg-base-two-600:hover {
-    background: #353F90;
+    background: #336699;
 }
 
 .hover-border-bottom:hover {
@@ -3369,7 +3374,7 @@ input:focus-visible {
 }
 
 .focus-visible-border-main-600:focus-visible {
-    border: 1px solid #353F90 !important;
+    border: 1px solid #336699 !important;
     outline: 0;
 }
 
@@ -4060,7 +4065,7 @@ input:focus-visible {
 }
 
 .group:hover .group-hover-border-base-two-600 {
-    border-bottom: 2px solid #353F90 !important;
+    border-bottom: 2px solid #336699 !important;
 }
 
 .group-hover-text-transition {
@@ -8611,7 +8616,7 @@ input:focus-visible {
 .header-item-link::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: 6px;
     left: 4px;
     width: 98px;
@@ -8624,7 +8629,7 @@ input:focus-visible {
 .header-item-link:hover::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: -6px;
     left: -5px;
     width: 98px;
@@ -8893,7 +8898,7 @@ input:focus-visible {
 .banner-item-link::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: 4px;
     left: 4px;
     width: 100%;
@@ -8906,7 +8911,7 @@ input:focus-visible {
 .banner-item-link:hover::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: -4px;
     left: -4px;
     width: 100%;
@@ -9017,7 +9022,7 @@ input:focus-visible {
     content: "";
     width: 281px;
     height: 52px;
-    background: #353F90;
+    background: #336699;
     z-index: -1;
     top: 6px;
     left: 7px;
@@ -9030,7 +9035,7 @@ input:focus-visible {
     content: "";
     width: 281px;
     height: 52px;
-    background: #353F90;
+    background: #336699;
     z-index: -1;
     top: -6px;
     left: -5px;
@@ -9091,7 +9096,7 @@ input:focus-visible {
     z-index: -1;
     top: 8px;
     left: 8px;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -9104,7 +9109,7 @@ input:focus-visible {
     z-index: -1;
     top: -8px;
     left: -8px;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
 }
 
@@ -9117,7 +9122,7 @@ input:focus-visible {
     font-size: 16px;
     font-weight: 500;
     color: white;
-    background-color: #353F90;
+    background-color: #336699;
     /* Blue button color */
     border-radius: 0.5rem;
     text-decoration: none;
@@ -9145,7 +9150,7 @@ input:focus-visible {
 }
 
 .btn-link:hover {
-  color: var(--neutral-200) !important;
+  color: var(--neutral-05) !important;
 }
 
 .btn-link-pre {
@@ -9226,7 +9231,7 @@ input:focus-visible {
     width: 131px;
     height: 55px;
     z-index: -1;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 0.5rem;
     top: -3px;
     left: -3px;
@@ -9278,7 +9283,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: 3px;
     left: 3px;
@@ -9291,7 +9296,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: -3px;
     left: -3px;
@@ -9357,7 +9362,7 @@ input:focus-visible {
 .our-serbices-item-link::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: 4px;
     left: 4px;
     width: 100%;
@@ -9370,7 +9375,7 @@ input:focus-visible {
 .our-serbices-item-link:hover::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: -4px;
     left: -4px;
     width: 100%;
@@ -9419,7 +9424,7 @@ input:focus-visible {
     top: 4px;
     left: 4px;
     z-index: -1;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -9432,7 +9437,7 @@ input:focus-visible {
     top: -4px;
     left: -3px;
     z-index: -1;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
 }
 
@@ -9441,7 +9446,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 12px;
     top: 4px;
     left: 4px;
@@ -9458,7 +9463,7 @@ input:focus-visible {
     top: 4px;
     left: 4px;
     z-index: -1;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -9471,7 +9476,7 @@ input:focus-visible {
     top: -4px;
     left: -4px;
     z-index: -1;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
 }
 
@@ -9520,7 +9525,7 @@ input:focus-visible {
 .our-services-three::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     max-width: 948px;
     width: 100%;
     height: 100%;
@@ -9615,7 +9620,7 @@ input:focus-visible {
 }
 
 .swiper-pagination-bullet-active {
-    background-color: #353F90;
+    background-color: #336699;
 }
 
 /*==================== our services three css end =======================*/
@@ -9647,7 +9652,7 @@ input:focus-visible {
 .fast-safe::before {
     position: absolute;
     content: "";
-    background: linear-gradient(0deg, #353F90 0%, rgba(37, 87, 236, 0) 100%);
+    background: linear-gradient(0deg, #336699 0%, rgba(37, 87, 236, 0) 100%);
     width: 3px;
     height: 201px;
     animation: upDown 24s linear infinite;
@@ -9849,7 +9854,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     top: 4px;
     left: 4px;
@@ -9862,7 +9867,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     top: -4px;
     left: -4px;
@@ -9968,7 +9973,7 @@ input:focus-visible {
     font-family: "Phosphor";
     width: 40px;
     height: 40px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     color: #fff;
     display: flex;
@@ -10005,7 +10010,7 @@ input:focus-visible {
 
 .nav-pills .nav-link-three.active,
 .nav-pills .show>.nav-link-three {
-    background-color: #353F90 !important;
+    background-color: #336699 !important;
     color: #FFFFFF !important;
     border-bottom: 3px solid #AEFF1C;
     border-radius: 12px;
@@ -10047,7 +10052,7 @@ input:focus-visible {
     z-index: -1;
     top: 4px;
     left: 4px;
-    background: #353F90;
+    background: #336699;
     border-radius: 10px;
     transition: 0.4s;
 }
@@ -10060,7 +10065,7 @@ input:focus-visible {
     z-index: -1;
     top: -4px;
     left: -4px;
-    background: #353F90;
+    background: #336699;
     border-radius: 10px;
 }
 
@@ -10072,7 +10077,7 @@ input:focus-visible {
     z-index: -1;
     top: 4px;
     left: 4px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 10px;
     transition: 0.4s;
 }
@@ -10085,7 +10090,7 @@ input:focus-visible {
     z-index: -1;
     top: -4px;
     left: -4px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 10px;
     transition: 0.4s;
 }
@@ -10165,7 +10170,7 @@ input:focus-visible {
     top: 3px;
     left: 3px;
     z-index: -1;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -10178,7 +10183,7 @@ input:focus-visible {
     top: -3px;
     left: -3px;
     z-index: -1;
-    background: #353F90;
+    background: #336699;
     border-radius: 0.5rem;
 }
 
@@ -10188,7 +10193,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     top: 4px;
     left: 4px;
@@ -10201,7 +10206,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     top: -4px;
     left: -4px;
@@ -10231,7 +10236,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: 3px;
     left: 3px;
@@ -10244,7 +10249,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: -3px;
     left: -3px;
@@ -10295,7 +10300,7 @@ input:focus-visible {
 
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
-    background-color: #353F90 !important;
+    background-color: #336699 !important;
     color: #fff !important;
 }
 
@@ -10336,7 +10341,7 @@ input:focus-visible {
     top: 4px;
     left: 4px;
     border-radius: 0.5rem;
-    background: #353F90;
+    background: #336699;
     transition: 0.4s;
 }
 
@@ -10349,7 +10354,7 @@ input:focus-visible {
     top: -4px;
     left: -4px;
     border-radius: 0.5rem;
-    background: #353F90;
+    background: #336699;
 }
 
 .platform-two-link::before {
@@ -10357,7 +10362,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     top: 4px;
     left: 4px;
     z-index: -1;
@@ -10370,7 +10375,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     top: -4px;
     left: -4px;
     z-index: -1;
@@ -10484,7 +10489,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     top: 4px;
     left: 4px;
@@ -10497,7 +10502,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     top: -4px;
     left: -3px;
@@ -10515,7 +10520,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     top: 3px;
     left: 3px;
     z-index: -1;
@@ -10528,7 +10533,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     top: -4px;
     left: -4px;
     z-index: -1;
@@ -10563,7 +10568,7 @@ input:focus-visible {
 .our-pricing-plan-three-link::before {
     position: absolute;
     content: "";
-    background-color: #353F90;
+    background-color: #336699;
     top: 4px;
     left: 4px;
     width: 100%;
@@ -10578,7 +10583,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: 3px;
     left: 3px;
@@ -10591,7 +10596,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: -3px;
     left: -3px;
@@ -10657,7 +10662,7 @@ input:focus-visible {
 }
 
 .header-nav-menu__item .activePage .header-nav-submenu__link {
-    background-color: #353F90 !important;
+    background-color: #336699 !important;
     color: #FFFFFF;
     border-radius: 12px;
 }
@@ -10882,7 +10887,7 @@ button.show {
     top: 4px;
     left: 4px;
     border-radius: 8px;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
     transition: 0.4s;
 }
@@ -10895,7 +10900,7 @@ button.show {
     top: -3px;
     left: -3px;
     border-radius: 8px;
-    background-color: #353F90;
+    background-color: #336699;
     z-index: -1;
 }
 
@@ -10978,7 +10983,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     top: 3px;
     left: 3px;
     z-index: -1;
@@ -10991,7 +10996,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     top: -3px;
     left: -3px;
     z-index: -1;
@@ -11005,7 +11010,7 @@ button.show {
     height: 100%;
     top: 5px;
     left: 4px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     z-index: -1;
     transition: 0.4s;
@@ -11018,7 +11023,7 @@ button.show {
     height: 100%;
     top: -5px;
     left: -4px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     z-index: -1;
 }
@@ -11083,7 +11088,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: 4px;
     left: 4px;
@@ -11096,7 +11101,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     top: -4px;
     left: -4px;
@@ -11139,7 +11144,7 @@ button.show {
     height: 100%;
     top: 4px;
     left: 4px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     z-index: -1;
     transition: 0.5s;
@@ -11152,7 +11157,7 @@ button.show {
     height: 100%;
     top: -4px;
     left: -4px;
-    background-color: #353F90;
+    background-color: #336699;
     border-radius: 8px;
     z-index: -1;
 }
@@ -11768,7 +11773,7 @@ button.show {
     left: 0;
     width: 50%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(38, 99, 242, 0) 0%, #353F90 100%);
+    background: linear-gradient(90deg, rgba(38, 99, 242, 0) 0%, #336699 100%);
     animation: movingLine 2s linear infinite;
   }
   
